--- a/problems/146.lru-cache.md
+++ b/problems/146.lru-cache.md
@@ -1,123 +1,393 @@
-## 题目地址
-https://leetcode.com/problems/lru-cache/description/
+# 题目地址(146. LRU缓存机制)
+
+https://leetcode-cn.com/problems/lru-cache/
 
 ## 题目描述
 
 ```
-Design and implement a data structure for Least Recently Used (LRU) cache. It should support the following operations: get and put.
+运用你所掌握的数据结构，设计和实现一个  LRU (最近最少使用) 缓存机制 。
+实现 LRUCache 类：
 
-get(key) - Get the value (will always be positive) of the key if the key exists in the cache, otherwise return -1.
-put(key, value) - Set or insert the value if the key is not already present. When the cache reached its capacity, it should invalidate the least recently used item before inserting a new item.
+LRUCache(int capacity) 以正整数作为容量 capacity 初始化 LRU 缓存
+int get(int key) 如果关键字 key 存在于缓存中，则返回关键字的值，否则返回 -1 。
+void put(int key, int value) 如果关键字已经存在，则变更其数据值；如果关键字不存在，则插入该组「关键字-值」。当缓存容量达到上限时，它应该在写入新数据之前删除最久未使用的数据值，从而为新的数据值留出空间。
+ 
 
-Follow up:
-Could you do both operations in O(1) time complexity?
+进阶：你是否可以在 O(1) 时间复杂度内完成这两种操作？
 
-Example:
+ 
 
-LRUCache cache = new LRUCache( 2 /* capacity */ );
+示例：
 
-cache.put(1, 1);
-cache.put(2, 2);
-cache.get(1);       // returns 1
-cache.put(3, 3);    // evicts key 2
-cache.get(2);       // returns -1 (not found)
-cache.put(4, 4);    // evicts key 1
-cache.get(1);       // returns -1 (not found)
-cache.get(3);       // returns 3
-cache.get(4);       // returns 4
+输入
 
+["LRUCache", "put", "put", "get", "put", "get", "put", "get", "get", "get"]
+[[2], [1, 1], [2, 2], [1], [3, 3], [2], [4, 4], [1], [3], [4]]
+输出
+[null, null, null, 1, null, -1, null, -1, 3, 4]
+解释
+
+LRUCache lRUCache = new LRUCache(2);
+lRUCache.put(1, 1); // 缓存是 {1=1}
+lRUCache.put(2, 2); // 缓存是 {1=1, 2=2}
+lRUCache.get(1);    // 返回 1
+lRUCache.put(3, 3); // 该操作会使得关键字 2 作废，缓存是 {1=1, 3=3}
+lRUCache.get(2);    // 返回 -1 (未找到)
+lRUCache.put(4, 4); // 该操作会使得关键字 1 作废，缓存是 {4=4, 3=3}
+lRUCache.get(1);    // 返回 -1 (未找到)
+lRUCache.get(3);    // 返回 3
+lRUCache.get(4);    // 返回 4
 ```
 
-## 前置知识
+## 哈希法
 
-- 队列
+### 思路
 
-## 公司
+1. 确定需要使用的数据结构
 
-- 阿里
-- 腾讯
-- 百度
-- 字节
+   1. 根据题目要求,存储的数据需要保证顺序关系(逻辑层面) ===> 使用数组,链表等保证顺序关系
 
-## 思路
+   2. 同时需要对数据进行频繁的增删, 时间复杂度 O(1) ==> 使用链表等
 
-`本题已被收录到我的新书中，敬请期待～`
+   3. 对数据进行读取时, 时间复杂度 O(1) ===> 使用哈希表
 
-由于是保留是最近使用的 N 条数据，这就和队列的特性很符合， 先进入队列的，先出队列。
+      最终采取双向链表 + 哈希表
 
-因此思路就是用一个队列来记录目前缓存的所有 key， 每次 push 都进行判断，如果
-超出最大容量限制则进行清除缓存的操作， 具体清除谁就按照刚才说的队列方式进行处理，同时对 key 进行入队操作。
+      > 1. 双向链表按最后一次访问的时间的顺序进行排列, 链表头部为最近访问的节点
+      > 2. 哈希表,以关键字为键,以链表节点的地址为值
 
-get 的时候，如果缓存中有，则调整队列（具体操作为删除指定元素和入队两个操作）。 缓存中没有则返回-1
+2. put 操作
 
-## 关键点解析
+   通过哈希表, 查看传入的关键字对应的链表节点, 是否存在
 
-- 队列简化操作
+   1. 如果存在,
+      1. 将该链表节点的值更新
+      2. 将该该链表节点调整至链表头部
+   2. 如果不存在
+      1. 如果链表容量未满,
+         1. 新生成节点,
+         2. 将该节点位置调整至链表头部
+      2. 如果链表容量已满
+         1. 删除尾部节点
+         2. 新生成节点
+         3. 将该节点位置调整至链表头部
+      3. 将新生成的节点，按关键字为键，节点地址为值插入哈希表
 
-- 队列的操作是这道题的灵魂， 很容易少考虑情况
+3. get 操作
 
-## 代码
+   通过哈希表, 查看传入的关键字对应的链表节点, 是否存在
+
+   1. 节点存在
+      1. 将该节点位置调整至链表头部
+      2. 返回该节点的值
+   2. 节点不存在, 返回 null
+
+伪代码:
 
 ```js
-/**
- * @param {number} capacity
- */
 var LRUCache = function(capacity) {
-    this.cache = {};
-    this.capacity = capacity;
-    this.size = 0;
-    this.queue = [];
+	保存一个该数据结构的最大容量
+	生成一个双向链表,同时保存该链表的头结点与尾节点
+	生成一个哈希表
 };
 
-/** 
- * @param {number} key
- * @return {number}
- */
-LRUCache.prototype.get = function(key) {
-    const hit = this.cache[key];
-
-    if (hit !== undefined) {
-        this.queue = this.queue.filter(q => q !== key);
-        this.queue.push(key);
-        return hit;
-    }
-    return -1;
+function get (key) {
+	if 哈希表中存在该关键字 {
+		根据哈希表获取该链表节点
+		将该节点放置于链表头部
+		return 链表节点的值
+	} else {
+		  return -1
+	}
 };
 
-/** 
- * @param {number} key 
- * @param {number} value
- * @return {void}
- */
-LRUCache.prototype.put = function(key, value) {
-    const hit = this.cache[key];
-
-    // update cache
-    this.cache[key] = value;
-
-    if (!hit) {
-        // invalid cache and resize size;
-        if (this.size === this.capacity) {
-            // invalid cache
-            const key = this.queue.shift();
-            this.cache[key] = undefined;
-        } else {
-            this.size = this.size + 1;
-        }
-        this.queue.push(key);
-    } else {
-        this.queue = this.queue.filter(q => q !== key);
-        this.queue.push(key);
-    }
+function put (key, value) {
+    if 哈希表中存在该关键字 {
+		根据哈希表获取该链表节点
+		将该链表节点的值更新
+		将该节点放置于链表头部
+	} else {
+		if 容量已满 {
+			删除链表尾部的节点
+			新生成一个节点
+			将该节点放置于链表头部
+		} else {
+			新生成一个节点
+			将该节点放置于链表头部
+		}
+	}
 };
-
-/** 
- * Your LRUCache object will be instantiated and called as such:
- * var obj = new LRUCache(capacity)
- * var param_1 = obj.get(key)
- * obj.put(key,value)
- */
-
 ```
 
-本题删除的时间复杂度是不符合要求的。 应该采用双向链表在 O(1) 时间找到前驱进行删除。
+JS 代码参考:
+
+```js
+function ListNode(key, val) {
+  this.key = key;
+  this.val = val;
+  this.pre = this.next = null;
+}
+
+var LRUCache = function (capacity) {
+  this.capacity = capacity;
+  this.size = 0;
+  this.data = {};
+  this.head = new ListNode();
+  this.tail = new ListNode();
+  this.head.next = this.tail;
+  this.tail.pre = this.head;
+};
+
+function get(key) {
+  if (this.data[key] !== undefined) {
+    let node = this.data[key];
+    this.removeNode(node);
+    this.appendHead(node);
+    return node.val;
+  } else {
+    return -1;
+  }
+}
+
+function put(key, value) {
+  let node;
+  if (this.data[key] !== undefined) {
+    node = this.data[key];
+    this.removeNode(node);
+    node.val = value;
+  } else {
+    node = new ListNode(key, value);
+    this.data[key] = node;
+    if (this.size < this.capacity) {
+      this.size++;
+    } else {
+      key = this.removeTail();
+      delete this.data[key];
+    }
+  }
+  this.appendHead(node);
+}
+
+function removeNode(node) {
+  let preNode = node.pre,
+    nextNode = node.next;
+  preNode.next = nextNode;
+  nextNode.pre = preNode;
+}
+
+function appendHead(node) {
+  let firstNode = this.head.next;
+  this.head.next = node;
+  node.pre = this.head;
+  node.next = firstNode;
+  firstNode.pre = node;
+}
+
+function removeTail() {
+  let key = this.tail.pre.key;
+  this.removeNode(this.tail.pre);
+  return key;
+}
+```
+
+Go Code:
+```go
+type LRUCache struct {
+	Cap   int
+	Hash  map[int]*DoubleListNode
+	Cache *DoubleList
+	Size  int
+}
+
+func Constructor(capacity int) LRUCache {
+	return LRUCache{
+		Cap:   capacity,
+		Hash:  make(map[int]*DoubleListNode),
+		Cache: NewDoubleList(),
+	}
+}
+
+func (this *LRUCache) Get(key int) int {
+	n, ok := this.Hash[key]
+	if !ok {
+		return -1
+	}
+
+	// 设为最近使用过
+	this.Cache.remove(n)
+	this.Cache.append(n)
+
+	return n.Val
+}
+
+func (this *LRUCache) Put(key int, value int) {
+	n, ok := this.Hash[key]
+	if !ok { // cache 不存在
+		// 增加节点
+		newNode := &DoubleListNode{Key: key, Val: value}
+		this.Hash[key] = newNode
+		this.Cache.append(newNode)
+
+		if this.Cap == this.Size { // 已满
+			// 删除尾节点
+			tailNode := this.Cache.tail.Pre
+			delete(this.Hash, tailNode.Key)
+			this.Cache.remove(tailNode)
+		} else {
+			this.Size++
+		}
+	} else {
+		// cache 存在
+		// 设为最近使用过
+		this.Cache.remove(n)
+        this.Cache.append(n)
+        
+        n.Val = value // 更新值
+	}
+}
+
+type DoubleListNode struct {
+	Key, Val  int
+	Pre, Next *DoubleListNode
+}
+
+type DoubleList struct {
+	Head, tail *DoubleListNode
+}
+
+func NewDoubleList() *DoubleList {
+	dl := &DoubleList{
+		Head: &DoubleListNode{},
+		tail: &DoubleListNode{},
+	}
+	dl.Head.Next = dl.tail
+	dl.tail.Pre = dl.Head
+	return dl
+}
+
+func (dl *DoubleList) append(n *DoubleListNode) {
+	n.Next = dl.Head.Next
+	n.Pre = dl.Head
+	dl.Head.Next.Pre = n
+	dl.Head.Next = n
+}
+
+func (dl *DoubleList) remove(n *DoubleListNode) {
+	n.Pre.Next = n.Next
+	n.Next.Pre = n.Pre
+}
+```
+
+PHP Code:
+```php
+class LRUCache
+{
+    public $hash = []; // key => DoubleListNode
+    public $cache;
+    public $size = 0;
+    public $cap; // 容量
+
+    /**
+     * @param Integer $capacity
+     */
+    function __construct($capacity)
+    {
+        $this->cap = $capacity;
+        $this->cache = new DoubleList();
+    }
+
+    /**
+     * @param Integer $key
+     * @return Integer
+     */
+    function get($key)
+    {
+        if (!isset($this->hash[$key])) return -1;
+
+        // 更新节点
+        /** @var DoubleListNode $node */
+        $node = $this->hash[$key];
+        $this->cache->remove($node);
+        $this->cache->append($node);
+
+        return $node->val;
+    }
+
+    /**
+     * @param Integer $key
+     * @param Integer $value
+     * @return NULL
+     */
+    function put($key, $value)
+    {
+        if (isset($this->hash[$key])) { // key 存在
+            // 更新节点
+            /** @var DoubleListNode $node */
+            $node = $this->hash[$key];
+            $this->cache->remove($node);
+            $this->cache->append($node);
+            $node->val = $value;
+        } else { // key 不存在, 新增节点
+            $node = new DoubleListNode($key, $value);
+            $this->cache->append($node);
+            $this->hash[$key] = $node;
+
+            if ($this->size == $this->cap) {
+                // 删除原节点
+                $oldNode = $this->cache->tail->pre;
+                $this->cache->remove($oldNode);
+                unset($this->hash[$oldNode->key]);
+            } else {
+                $this->size++;
+            }
+        }
+    }
+}
+
+class DoubleListNode
+{
+    public $key;
+    public $val;
+    public $pre;
+    public $next;
+
+    public function __construct($key = null, $val = null)
+    {
+        if ($key) $this->key = $key;
+        if ($val) $this->val = $val;
+    }
+}
+
+class DoubleList
+{
+    public $head;
+    public $tail;
+
+    public function __construct()
+    {
+        $this->head = new DoubleListNode();
+        $this->tail = new DoubleListNode();
+        $this->head->next = $this->tail;
+        $this->tail->pre = $this->head;
+    }
+
+    public function append(DoubleListNode $node)
+    {
+        $node->pre = $this->head;
+        $node->next = $this->head->next;
+        $this->head->next->pre = $node;
+        $this->head->next = $node;
+    }
+
+    public function remove(DoubleListNode $node)
+    {
+        $node->pre->next = $node->next;
+        $node->next->pre = $node->pre;
+    }
+}
+```
+
+**复杂度分析**
+
+- 时间复杂度：$O(1)$
+- 空间复杂度：$O(n)$ n为容量的大小
