--- a/problems/768.max-chunks-to-make-sorted-ii.md
+++ b/problems/768.max-chunks-to-make-sorted-ii.md
@@ -78,7 +78,9 @@ arr[i]的大小在[0, 10**8]之间。
 
 ### 代码
 
-语言支持：Python
+- 语言支持：Python
+
+Python Code:
 
 ```py
 class Solution(object):
@@ -116,7 +118,9 @@ class Solution(object):
 
 ### 代码
 
-语言支持：Python
+- 语言支持：Python
+
+Python Code:
 
 ```py
 class Solution(object):
@@ -209,7 +213,9 @@ class Solution(object):
 
 ### 代码
 
-语言支持：Python，CPP，Java，JS, Go, PHP
+- 语言支持：Python，CPP，Java，JS, Go, PHP
+
+Python Code:
 
 ```py
 class Solution:
@@ -233,7 +239,7 @@ class Solution:
 
 ```
 
-CPP:
+CPP Code:
 
 ```cpp
 class Solution {
@@ -264,7 +270,7 @@ public:
 };
 ```
 
-JAVA:
+JAVA Code:
 
 ```java
 class Solution {
@@ -292,7 +298,7 @@ class Solution {
 }
 ```
 
-JS:
+JS Code:
 
 ```js
 var maxChunksToSorted = function (arr) {
@@ -312,7 +318,7 @@ var maxChunksToSorted = function (arr) {
 };
 ```
 
-Go:
+Go Code:
 
 ```go
 func maxChunksToSorted(arr []int) int {
@@ -338,7 +344,7 @@ func maxChunksToSorted(arr []int) int {
 }
 ```
 
-PHP:
+PHP Code:
 
 ```php
 class Solution
