--- a/problems/61.Rotate-List.md
+++ b/problems/61.Rotate-List.md
@@ -1,4 +1,4 @@
-# 题目地址(61. 旋转链表)
+## 题目地址(61. 旋转链表)
 
 https://leetcode-cn.com/problems/rotate-list/
 
@@ -26,38 +26,45 @@ https://leetcode-cn.com/problems/rotate-list/
 ```
 
 ## 快慢指针法
-#### 前置知识-求单链表的倒数第N个节点
+### 前置知识
+- 求单链表的倒数第N个节点
 
-**思路**
+### 思路一
 1. 采用快慢指
 2. 快指针与慢指针都以每步一个节点的速度向后遍历
 3. 快指针比慢指针先走N步
 4. 当快指针到达终点时，慢指针正好是倒数第N个节点
 
-**伪代码**
+### 思路一代码
+
+- 伪代码
+
 ```js
-  快指针 = head
-  慢指针 = head
-  while(快指针.next){
-      if(N-- <= 0){
-          慢指针 = 慢指针.next
-      }
-      快指针 = 快指针.next
-  }
+快指针 = head
+慢指针 = head
+while(快指针.next){
+    if(N-- <= 0){
+        慢指针 = 慢指针.next
+    }
+    快指针 = 快指针.next
+}
 ```
 
-js Code:
+- 语言支持: JS
+
+JS Code:
+
 ```js
-  let slow = fast = head
-  while(fast.next){
-      if(k-- <= 0){
-          slow = slow.next
-      }
-      fast = fast.next
-  }
+let slow = fast = head
+while(fast.next){
+    if(k-- <= 0){
+        slow = slow.next
+    }
+    fast = fast.next
+}
 ```
 
-**思路**
+### 思路二
 1. 获取单链表的倒数第N + 1 与倒数第N个节点
 2. 将倒数第N + 1个节点的next指向null
 3. 将链表尾节点的next指向head
@@ -74,8 +81,9 @@ js Code:
   就像是长度为1000米的环形跑道，   
   你跑1100米与跑100米到达的是同一个地点    
 
+### 思路二代码
 
-伪代码：
+- 伪代码
 
 ```js
   获取链表的长度
@@ -86,7 +94,10 @@ js Code:
   return 倒数第k个节点
 ```
 
-js Code:
+- 语言支持: JS, JAVA, Python, Go, PHP
+
+JS Code:
+
 ```js
 var rotateRight = function(head, k) {
     if(!head || !head.next) return head
@@ -110,7 +121,8 @@ var rotateRight = function(head, k) {
 };
 ```
 
-java Code:
+JAVA Code:
+
 ```java
 class Solution {
     public ListNode rotateRight(ListNode head, int k) {
@@ -137,7 +149,8 @@ class Solution {
 }
 ```
 
-py3 Code:
+Python Code:
+
 ```py
 class Solution:
     def rotateRight(self, head: ListNode, k: int) -> ListNode:
@@ -171,6 +184,7 @@ class Solution:
 ```
 
 Go Code:
+
 ```go
 /**
  * Definition for singly-linked list.
@@ -211,6 +225,7 @@ func rotateRight(head *ListNode, k int) *ListNode {
 ```
 
 PHP Code:
+
 ```php
 /**
  * Definition for a singly-linked list.
@@ -254,7 +269,7 @@ class Solution
 }
 ```
 
-**复杂度分析**
+## 复杂度分析
 
 - 时间复杂度：节点最多只遍历两遍，时间复杂度为$O(N)$
 - 空间复杂度：未使用额外的空间，空间复杂度$O(1)$
