--- a/problems/42.trapping-rain-water.md
+++ b/problems/42.trapping-rain-water.md
@@ -43,7 +43,7 @@ https://leetcode-cn.com/problems/trapping-rain-water/
 
 如果采用暴力求解的话，思路应该是 height 数组依次求和，然后相加。
 
-伪代码:
+- 伪代码
 
 ```js
 for (let i = 0; i < height.length; i++) {
@@ -66,9 +66,9 @@ for (let i = 0; i < height.length; i++) {
 
 ### 代码
 
-代码支持 JavaScript，Python3，C++:
+- 代码支持: JS, Python3, C++:
 
-JavaScript Code:
+JS Code:
 
 ```js
 /*
@@ -182,7 +182,9 @@ int trap(vector<int>& heights)
 
 ### 代码
 
-代码支持 Python3，C++, Go:
+- 代码支持: Python, C++, Go, PHP:
+
+Python Code:
 
 ```python
 class Solution:
@@ -206,6 +208,8 @@ class Solution:
                 r -= 1
         return ans
 ```
+
+C++ Code:
 
 ```c++
 
@@ -231,6 +235,8 @@ public:
 
 };
 ```
+
+Go Code:
 
 ```go
 func trap(height []int) int {
@@ -261,6 +267,8 @@ func trap(height []int) int {
     return ans
 }
 ```
+
+PHP Code:
 
 ```php
 class Solution
