--- a/problems/24.swapNodesInPairs.md
+++ b/problems/24.swapNodesInPairs.md
@@ -1,8 +1,8 @@
 ## 题目地址(24. 两两交换链表中的节点)
+
 https://leetcode-cn.com/problems/swap-nodes-in-pairs/
 
 ## 题目描述
-
 
 给定一个链表，两两交换其中相邻的节点，并返回交换后的链表。
 
@@ -11,27 +11,21 @@ https://leetcode-cn.com/problems/swap-nodes-in-pairs/
 ![image.png](https://assets.leetcode.com/uploads/2020/10/03/swap_ex1.jpg)
 
 ```
-
 示例 1：
-
-
 输入：head = [1,2,3,4]
 输出：[2,1,4,3]
-示例 2：
 
+示例 2：
 输入：head = []
 输出：[]
-示例 3：
 
+示例 3：
 输入：head = [1]
 输出：[1]
- 
 
 提示：
-
 链表中节点的数目在范围 [0, 100] 内
 0 <= Node.val <= 100
-
 ```
 
 ## 前置知识
@@ -70,7 +64,9 @@ https://leetcode-cn.com/problems/swap-nodes-in-pairs/
 
 ## 代码
 
-* 语言支持：JS，Python3, Go, PHP
+- 语言支持：JS，Python3, Go, PHP
+
+JS Code:
 
 ```js
 /**
@@ -103,9 +99,10 @@ var swapPairs = function(head) {
   }
   return dummy.next;
 };
-
 ```
-Python3 Code:
+
+Python Code:
+
 ```python
 class Solution:
     def swapPairs(self, head: ListNode) -> ListNode:
