--- a/problems/160.Intersection-of-Two-Linked-Lists.md
+++ b/problems/160.Intersection-of-Two-Linked-Lists.md
@@ -13,12 +13,13 @@ https://leetcode-cn.com/problems/intersection-of-two-linked-lists/
 - 链表
 - 双指针
 
-### 哈希法
+## 解法一: 哈希法
 
-- 有 A, B 这两条链表, 先遍历其中一个，比如 A 链表, 并将 A 中的所有节点存入哈希表。
-- 遍历 B 链表,检查节点是否在哈希表中, 第一个存在的就是相交节点
+有 A, B 这两条链表, 先遍历其中一个，比如 A 链表, 并将 A 中的所有节点存入哈希表。
 
-伪代码:
+遍历 B 链表,检查节点是否在哈希表中, 第一个存在的就是相交节点
+
+- 伪代码
 
 ```jsx
 data = new Set() // 存放A链表的所有节点的地址
@@ -37,7 +38,10 @@ while B不为空{
 return null // 两条链表没有相交点
 ```
 
+- 代码支持: JS
+
 JS Code:
+
 ```js
 let data = new Set();
 while (A !== null) {
@@ -56,7 +60,7 @@ return null;
 - 时间复杂度：$O(N)$
 - 空间复杂度：$O(N)$
 
-### 解法二：双指针
+## 解法二：双指针
 
 - 例如使用 a, b 两个指针分别指向 A, B 这两条链表, 两个指针相同的速度向后移动,
 - 当 a 到达链表的尾部时,重定位到链表 B 的头结点
@@ -72,7 +76,7 @@ return null;
 2. 当 a 指针将链表 1 遍历完后,重定位到链表 B 的头结点,然后继续遍历直至相交点(a 指针遍历的距离为 A + C + B)
 3. 同理 b 指针遍历的距离为 B + C + A
 
-伪代码:
+- 伪代码
 
 ```js
 a = headA
@@ -90,7 +94,10 @@ while a,b指针不相等时 {
 return a
 ```
 
+- 代码支持: JS, Python, Go, PHP
+
 JS Code:
+
 ```js
 var getIntersectionNode = function (headA, headB) {
   let a = headA,
@@ -104,6 +111,7 @@ var getIntersectionNode = function (headA, headB) {
 ```
 
 Python Code：
+
 ```py
 class Solution:
     def getIntersectionNode(self, headA: ListNode, headB: ListNode) -> ListNode:
@@ -115,6 +123,7 @@ class Solution:
 ```
 
 Go Code:
+
 ```go
 /**
  * Definition for singly-linked list.
@@ -145,6 +154,7 @@ func getIntersectionNode(headA, headB *ListNode) *ListNode {
 ```
 
 PHP Code:
+
 ```php
 /**
  * Definition for a singly-linked list.
