--- a/problems/142.Linked-List-Cycle-II.md
+++ b/problems/142.Linked-List-Cycle-II.md
@@ -1,4 +1,4 @@
-# 题目地址(142. 环形链表 II)
+## 题目地址(142. 环形链表 II)
 
 https://leetcode-cn.com/problems/linked-list-cycle-ii/
 
@@ -24,7 +24,7 @@ https://leetcode-cn.com/problems/linked-list-cycle-ii/
 2. 如果当前节点在哈希表中不存在,继续遍历,
 3. 如果存在,那么当前节点就是环的入口节点
 
-伪代码:
+- 伪代码:
 
 ```js
 data = new Set() // 声明哈希表
@@ -40,6 +40,8 @@ return null // 环不存在
 ```
 
 ### 代码
+
+- 代码支持: JS
 
 JS Code:
 
@@ -67,10 +69,8 @@ return null;
 
 1. 定义一个 fast 指针,每次**前进两步**,一个 slow 指针,每次**前进一步**
 2. 当两个指针相遇时
-
    1. 将 fast 指针指向链表头部,同时 fast 指针每次只**前进一步**
    2. slow 指针继续前进,每次**前进一步**
-
 3. 当两个指针再次相遇时,当前节点就是环的入口
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfigbvzje1j30ky0bhq3x.jpg)
@@ -90,7 +90,7 @@ return null;
 - 快指针从头节点走 A 步会到达环的入口
 - 慢指针从第一次相遇点走 A 步,相当于向后走 B 步,也会到达环的入口
 
-伪代码：
+- 伪代码：
 
 ```jsx
 fast = head
@@ -110,6 +110,8 @@ return fast
 ```
 
 ### 代码
+
+- 语言支持: JS, Go, PHP
 
 JS Code：
 
@@ -134,6 +136,7 @@ return fast;
 ```
 
 Go Code:
+
 ```go
 /**
  * Definition for singly-linked list.
@@ -167,6 +170,7 @@ func detectCycle(head *ListNode) *ListNode {
 ```
 
 PHP Code:
+
 ```php
 /**
  * Definition for a singly-linked list.
