--- a/problems/129.sum-root-to-leaf-numbers.md
+++ b/problems/129.sum-root-to-leaf-numbers.md
@@ -74,9 +74,9 @@ https://leetcode-cn.com/problems/sum-root-to-leaf-numbers/
 
 ## 代码
 
-* 语言支持：JS，C++，Python, Go, PHP
+- 语言支持：JS，C++，Python, Go, PHP
 
-JavaScipt Code：
+JS Code：
 
 ```js
 /*
@@ -113,6 +113,7 @@ var sumNumbers = function(root) {
 ```
 
 C++ Code：
+
 ```C++
 /**
  * Definition for a binary tree node.
