--- a/problems/104.maximum-depth-of-binary-tree.md
+++ b/problems/104.maximum-depth-of-binary-tree.md
@@ -20,7 +20,6 @@ https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/description/
     /  \
    15   7
 返回它的最大深度 3 。
-
 ```
 
 ## 前置知识
@@ -41,7 +40,8 @@ https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/description/
 ## 思路
 
 由于树是一种递归的数据结构，因此用递归去解决的时候往往非常容易，这道题恰巧也是如此，
-用递归实现的代码如下：
+
+- 用递归实现的代码如下：
 
 ```js
 var maxDepth = function (root) {
@@ -57,16 +57,14 @@ var maxDepth = function (root) {
 ## 关键点解析
 
 - 队列
-
 - 队列中用 Null(一个特殊元素)来划分每层，或者在对每层进行迭代之前保存当前队列元素的个数（即当前层所含元素个数）
-
 - 树的基本操作- 遍历 - 层次遍历（BFS）
 
 ## 代码
 
-- 语言支持：JS，C++，Java，Python
+- 语言支持：JS，C++，Java，Python, Go, PHP
 
-JavaScript Code:
+JS Code:
 
 ```js
 /*
@@ -217,6 +215,7 @@ class Solution:
 ```
 
 Go Code:
+
 ```go
 /**
  * Definition for a binary tree node.
@@ -254,6 +253,7 @@ func maxDepth(root *TreeNode) int {
 ```
 
 PHP Code:
+
 ```php
 /**
  * Definition for a binary tree node.
