--- a/problems/100.same-tree.md
+++ b/problems/100.same-tree.md
@@ -61,7 +61,7 @@ https://leetcode-cn.com/problems/same-tree/
 
 ### 代码
 
-语言支持：JS, Go, PHP
+- 语言支持：JS, Go, PHP
 
 JS Code：
 
@@ -125,7 +125,7 @@ class Solution
 
 ### 代码
 
-语言支持：JS
+- 语言支持：JS
 
 JS Code：
 
@@ -185,7 +185,7 @@ function isSameNode(nodeA, nodeB) {
 
 ### 代码
 
-语言支持：JS
+- 语言支持：JS
 
 JS Code：
 
