--- a/problems/297.serialize-and-deserialize-binary-tree.md
+++ b/problems/297.serialize-and-deserialize-binary-tree.md
@@ -152,7 +152,7 @@ def deserialize(self, data):
 
 ## 代码
 
-- 代码支持：JS，Python, Go, PHP
+- 代码支持：JS，Python, Go
 
 JS Code：
 
@@ -256,6 +256,83 @@ class Codec:
                 queue.append(r)
         return root
 
+```
+
+Go Code:
+
+```go
+/**
+ * Definition for a binary tree node.
+ * type TreeNode struct {
+ *     Val int
+ *     Left *TreeNode
+ *     Right *TreeNode
+ * }
+ */
+
+type Codec struct {
+}
+
+func Constructor() Codec {
+    return Codec{}
+}
+
+// Serializes a tree to a single string.
+func (this *Codec) serialize(root *TreeNode) string {
+    ans := ""
+    q := []*TreeNode{root} // queue
+    var cur *TreeNode
+    for len(q) > 0 {
+        cur, q = q[0], q[1:]
+        if cur != nil {
+            ans += strconv.Itoa(cur.Val) + ","
+            q = append(q, cur.Left)
+            q = append(q, cur.Right)
+        } else {
+            ans += "#,"
+        }
+    }
+    return ans[:len(ans)-1]
+}
+
+// Deserializes your encoded data to tree.
+func (this *Codec) deserialize(data string) *TreeNode {
+    if data == "#" {
+        return nil
+    }
+
+    a := strings.Split(data, ",")
+    var s string
+    s, a = a[0], a[1:]
+    v, _ := strconv.Atoi(s)
+    root := &TreeNode{Val: v}
+    q := []*TreeNode{root} // queue
+    var cur, newNode *TreeNode
+    for len(a) > 0 {
+        cur, q = q[0], q[1:] // pop
+
+        s, a = a[0], a[1:] // 左子树
+        if s != "#" {
+            v, _ := strconv.Atoi(s)
+            newNode = &TreeNode{Val: v}
+            cur.Left = newNode
+            q = append(q, newNode)
+        }
+
+        if len(a) == 0 {
+            return root
+        }
+
+        s, a = a[0], a[1:] // 右子树
+        if s != "#" {
+            v, _ := strconv.Atoi(s)
+            newNode = &TreeNode{Val: v}
+            cur.Right = newNode
+            q = append(q, newNode)
+        }
+    }
+    return root
+}
 ```
 
 **复杂度分析**
