--- a/problems/1.two-sum.md
+++ b/problems/1.two-sum.md
@@ -53,7 +53,7 @@ https://leetcode-cn.com/problems/two-sum
 
 ## 代码
 
-- 语言支持：JS
+- 语言支持：JS, Go
 
 ```js
 /**
@@ -71,6 +71,23 @@ const twoSum = function (nums, target) {
     map.set(nums[i], i);
   }
 };
+```
+
+Go Code:
+
+```go
+func twoSum(nums []int, target int) []int {
+	m := make(map[int]int)
+	for i, _ := range nums {
+		diff := target - nums[i]
+		if j, ok := m[diff]; ok {
+			return []int{i, j}
+		} else {
+			m[nums[i]] = i
+		}
+	}
+	return []int{}
+}
 ```
 
 **复杂度分析**
