--- a/problems/108.convert-sorted-array-to-binary-search-tree.md
+++ b/problems/108.convert-sorted-array-to-binary-search-tree.md
@@ -172,7 +172,7 @@ class Solution(object):
 **复杂度分析**
 
 - 时间复杂度：$O(N)$
-- 空间复杂度：隐式调用栈的开销为 $O(N)$
+- 空间复杂度：由于是平衡二叉树，因此隐式调用栈的开销为 $O(logN)$
 
 更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 
