--- a/problems/85.maximal-rectangle.md
+++ b/problems/85.maximal-rectangle.md
@@ -53,6 +53,8 @@ https://leetcode-cn.com/problems/maximal-rectangle/
 
 这样我们就可以使用`84. 柱状图中最大的矩形` 中的解法来进行了，这里我们使用单调栈来解。
 
+下面的代码直接将 84 题的代码封装成 API 调用了。
+
 ## 代码
 
 ```python
