--- a/problems/84.largest-rectangle-in-histogram.md
+++ b/problems/84.largest-rectangle-in-histogram.md
@@ -181,8 +181,8 @@ class Solution:
         for i in range(n + 2):
             while st and heights[st[-1]] > heights[i]:
                 a = heights[st[-1]]
-                # 如果没有前面的哨兵，这里可能会越界。
                 st.pop()
+                # 如果没有前面的哨兵，这里的 st[-1] 可能会越界。
                 ans = max(ans, a * (i - 1 - st[-1]))
             st.append(i)
         return ans
