--- a/problems/464.can-i-win.md
+++ b/problems/464.can-i-win.md
@@ -89,7 +89,7 @@ class Solution:
                 return False
             for n in range(1, maxChoosableInteger + 1):
                 # 对方有一种情况赢不了，我就选这个数字就能赢了，返回 true，代表可以赢。
-                if not backtrack(acc + n):
+                if not dfs(acc + n):
                     return True
             return False
 
