--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -104,10 +104,10 @@ class Solution:
 
     def permuteUnique(self, nums: List[int]) -> List[List[int]]:
         """自己写回溯法，与46题相比，需要去重"""
-        # 排序是为了去重
+        # 排序是为了方便去重
         nums.sort()
         res = []
-        def _backtrace(nums, pre_list):
+        def backtrack(nums, pre_list):
             if len(nums) <= 0:
                 res.append(pre_list)
             else:
@@ -119,8 +119,8 @@ class Solution:
                     p_list.append(nums[i])
                     left_nums = nums.copy()
                     left_nums.pop(i)
-                    _backtrace(left_nums, p_list)
-        _backtrace(nums, [])
+                    backtrack(left_nums, p_list)
+        backtrack(nums, [])
         return res
 ```
 
@@ -130,7 +130,7 @@ class Solution:
 - [39.combination-sum](./39.combination-sum.md)
 - [40.combination-sum-ii](./40.combination-sum-ii.md)
 - [46.permutations](./46.permutations.md)
-- [60.permutation-sequence](./60.permutation-sequence.md)(TODO)
+- [60.permutation-sequence](./60.permutation-sequence.md)
 - [78.subsets](./78.subsets.md)
 - [90.subsets-ii](./90.subsets-ii.md)
 - [113.path-sum-ii](./113.path-sum-ii.md)
