--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -67,9 +67,8 @@ function backtrack(list, nums, tempList, visited) {
   for (let i = 0; i < nums.length; i++) {
     // 和46.permutations的区别是这道题的nums是可以重复的
     // 我们需要过滤这种情况
-    if (visited[i]) continue; // 不能用tempList.includes(nums[i])了，因为有重复
-    // visited[i - 1] 这个判断容易忽略
-    if (i > 0 && nums[i] === nums[i - 1] && visited[i - 1]) continue;
+    if (visited[i]) continue; // 同一个数字不能用两次
+    if (i > 0 && nums[i] === nums[i - 1] && visited[i - 1]) continue; // 同样值的数字不能用两次
 
     visited[i] = true;
     tempList.push(nums[i]);
@@ -112,7 +111,7 @@ class Solution:
                 res.append(pre_list)
             else:
                 for i in range(len(nums)):
-                    # 如果是同样的数字，则之前一定已经生成了对应可能
+                    # 同样值的数字只能使用一次
                     if i > 0 and nums[i] == nums[i-1]:
                         continue
                     p_list = pre_list.copy()
