--- a/problems/46.permutations.md
+++ b/problems/46.permutations.md
@@ -50,6 +50,12 @@ https://leetcode-cn.com/problems/permutations/
 
 通用写法的具体代码见下方代码区。
 
+以 [1,1,2] 为例，我们的逻辑是：
+
+- 先从 [1,1,2] 选取一个数
+- 然后继续从 [1,1,2] 选取一个数，并且这个数不能是已经选取过的数。
+- 重复这个过程直到选取的数字达到了 3，
+
 ## 关键点解析
 
 - 回溯法
