--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -51,7 +51,9 @@ https://leetcode-cn.com/problems/permutations-ii/
 
 不过这还是有一个问题。 仍然以 [1,1,2]  为例，如果第一次选取了第一个1，第二次选取了第二个1，这就产生了一个组合 [1,1,2]。 如果继续第一次选取了第二个 1，而第二次选取了第一个 1，那么又会产生组合 [1,1,2]，可以看出这两个组合是重复的。
 
-一个解决方案是对 nums 进行一次排序，并规定如果 **i > 0 && nums[i] === nums[i - 1] && visited[i - 1]**， 则不进行选取即可。
+一个解决方案是对 nums 进行一次排序，并规定如果 **i > 0 and nums[i] == nums[i - 1] and visited[i - 1]**， 则不进行选取即可。
+
+> 经过这样的处理，每次实际上都会选取所有重复数字的第一个，这不重要，反正我们第一个 x 和 第 第 100 个 x 都是 x，因为其是基本类型。
 
 ## 关键点解析
 
