--- a/problems/47.permutations-ii.md
+++ b/problems/47.permutations-ii.md
@@ -53,7 +53,7 @@ https://leetcode-cn.com/problems/permutations-ii/
 
 一个解决方案是对 nums 进行一次排序，并规定如果 **i > 0 and nums[i] == nums[i - 1] and visited[i - 1]**， 则不进行选取即可。
 
-> 经过这样的处理，每次实际上都会选取所有重复数字的第一个，这不重要，反正我们第一个 x 和 第 第 100 个 x 都是 x，因为其是基本类型。
+经过这样的处理，每次实际上都会选取所有重复数字的第一个，比如上面的 [1,1,2] 中的第二个 1 永远不会被选取，取而代之的是第一个 1 会被选取两次。不过这不重要，反正我们第一个 x 和 第 100 个 x 都是 x，因为其是基本类型。
 
 ## 关键点解析
 
