--- a/problems/78.subsets.md
+++ b/problems/78.subsets.md
@@ -28,7 +28,7 @@ https://leetcode-cn.com/problems/subsets/
 
 ## 前置知识
 
-- 回溯
+- [回溯](https://github.com/azl397985856/leetcode/blob/master/thinkings/backtrack.md)
 
 ## 公司
 
@@ -39,7 +39,9 @@ https://leetcode-cn.com/problems/subsets/
 
 ## 思路
 
-子集和全排列题目不一样的点在于其需要在递归树的所有节点执行**加入结果集**，这一操作，而不像全排列需要在叶子节点执行**加入结果集**。
+回溯的基本思路清参考上方的回溯专题。
+
+子集类题目和全排列题目不一样的点在于其需要在递归树的所有节点执行**加入结果集**，这一操作，而不像全排列需要在叶子节点执行**加入结果集**。
 
 ## 关键点解析
 
