--- a/problems/100.same-tree.md
+++ b/problems/100.same-tree.md
@@ -61,7 +61,18 @@ https://leetcode-cn.com/problems/same-tree/
 
 ### 代码
 
-- 语言支持：JS, Go, PHP
+- 语言支持：CPP, JS, Go, PHP
+
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    bool isSameTree(TreeNode* p, TreeNode* q) {
+        return (!p && !q) || (p && q && p->val == q->val && isSameTree(p->left, q->left) && isSameTree(p->right, q->right));
+    }
+};
+```
 
 JS Code：
 
