--- a/problems/1031.maximum-sum-of-two-non-overlapping-subarrays.md
+++ b/problems/1031.maximum-sum-of-two-non-overlapping-subarrays.md
@@ -1,4 +1,5 @@
 ## 题目地址(1031. 两个非重叠子数组的最大和)
+
 https://leetcode-cn.com/problems/maximum-sum-of-two-non-overlapping-subarrays/
 
 ## 题目描述
@@ -50,23 +51,24 @@ L + M <= A.length <= 1000
 
 ## 思路(动态规划)
 
-题目中要求在前N(数组长度)个数中找出长度分别为L和M的非重叠子数组之和的最大值, 因此, 我们可以定义数组A中前i个数可构成的非重叠子数组L和M的最大值为SUMM[i], 并找到SUMM[i]和SUMM[i-1]的关系, 那么最终解就是SUMM[N]. 以下为图解:
+题目中要求在前 N(数组长度)个数中找出长度分别为 L 和 M 的非重叠子数组之和的最大值, 因此, 我们可以定义数组 A 中前 i 个数可构成的非重叠子数组 L 和 M 的最大值为 SUMM[i], 并找到 SUMM[i]和 SUMM[i-1]的关系, 那么最终解就是 SUMM[N]. 以下为图解:
 
 ![1031.Maximum Sum of Two Non-Overlapping Subarrays](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu02o63mj30iz0m9420.jpg)
 
 ## 关键点解析
 
-1. 注意图中描述的都是A[i-1], 而不是A[i], 因为base case为空数组, 而不是A[0];
-2. 求解图中ASUM数组的时候, 注意定义的是ASUM[i] = sum(A[0:i]), 因此当i等于0时, A[0:0]为空数组, 即: ASUM[0]为0, 而ASUM[1]才等于A[0];
-3. 求解图中MAXL数组时, 注意i < L时, 没有意义, 因为长度不够, 所以从i = L时才开始求解;
-4. 求解图中MAXM数组时, 也一样, 要从i = M时才开始求解;
-5. 求解图中SUMM数组时, 因为我们需要一个L子数组和一个M子数组, 因此长度要大于等于L+M才有意义, 所以要从i = L + M时开始求解.
+1. 注意图中描述的都是 A[i-1], 而不是 A[i], 因为 base case 为空数组, 而不是 A[0];
+2. 求解图中 ASUM 数组的时候, 注意定义的是 ASUM[i] = sum(A[0:i]), 因此当 i 等于 0 时, A[0:0]为空数组, 即: ASUM[0]为 0, 而 ASUM[1]才等于 A[0];
+3. 求解图中 MAXL 数组时, 注意 i < L 时, 没有意义, 因为长度不够, 所以从 i = L 时才开始求解;
+4. 求解图中 MAXM 数组时, 也一样, 要从 i = M 时才开始求解;
+5. 求解图中 SUMM 数组时, 因为我们需要一个 L 子数组和一个 M 子数组, 因此长度要大于等于 L+M 才有意义, 所以要从 i = L + M 时开始求解.
 
 ## 代码
 
-* 语言支持: Python
+语言支持: Python, CPP
 
 Python Code:
+
 ```python
 class Solution:
     def maxSumTwoNoOverlap(self, a: List[int], l: int, m: int) -> int:
@@ -111,12 +113,43 @@ class Solution:
         return msum[-1]
 ```
 
+CPP Code:
+
+```cpp
+class Solution {
+private:
+    int get(vector<int> &v, int i) {
+        return (i >= 0 && i < v.size()) ? v[i] : 0;
+    }
+public:
+    int maxSumTwoNoOverlap(vector<int>& A, int L, int M) {
+        int N = A.size(), ans = 0;
+        partial_sum(A.begin(), A.end(), A.begin());
+        vector<int> maxLeft(N, 0), maxRight(N, 0);
+        for (int i = L - 1; i < N; ++i) maxLeft[i] = max(get(maxLeft, i - 1), A[i] - get(A, i - L));
+        for (int i = N - L; i >= 0; --i) maxRight[i] = max(get(maxRight, i + 1), A[i + L - 1] - get(A, i - 1));
+        for (int i = M - 1; i < N; ++i) {
+            int sum = A[i] - get(A, i - M)
+                + max(get(maxLeft, i - M), get(maxRight, i + 1));
+            ans = max(ans, sum);
+        }
+        return ans;
+    }
+};
+```
+
+**复杂度分析**
+
+- 时间复杂度：$O(N)$，其中 N 为数组长度。
+- 空间复杂度：$O(N)$，其中 N 为数组长度。
+
 ## 扩展
 
-1. 代码中, 求解了4个动态规划数组来求解最终值, 有没有可能只用两个数组来求解该题, 可以的话, 需要保留的又是哪两个数组?
-2. 代码中, 求解的4动态规划数组的顺序能否改变, 哪些能改, 哪些不能改?
+1. 代码中, 求解了 4 个动态规划数组来求解最终值, 有没有可能只用两个数组来求解该题, 可以的话, 需要保留的又是哪两个数组?
+2. 代码中, 求解的 4 动态规划数组的顺序能否改变, 哪些能改, 哪些不能改?
 
-如果采用前缀和数组的话，可以只使用O(n)的空间来存储前缀和，O(1)的动态规划状态空间来完成。C++代码如下:
+如果采用前缀和数组的话，可以只使用 O(n)的空间来存储前缀和，O(1)的动态规划状态空间来完成。C++代码如下:
+
 ```C++
 class Solution {
 public:
