--- a/problems/1031.maximum-sum-of-two-non-overlapping-subarrays.md
+++ b/problems/1031.maximum-sum-of-two-non-overlapping-subarrays.md
@@ -140,8 +140,8 @@ public:
 
 **复杂度分析**
 
-- 时间复杂度：$O(N)$，其中 N 为数组长度。
-- 空间复杂度：$O(N)$，其中 N 为数组长度。
+- 时间复杂度：$$O(N)$$，其中 N 为数组长度。
+- 空间复杂度：$$O(N)$$，其中 N 为数组长度。
 
 ## 扩展
 
